# qiskit-aer

./: .buildinfo  .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  .mailmap  .mergify.yml  .pylintrc  .stestr.conf  .travis.yml  BENCHMARKING.md  BUILDING_ROCM.md  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTED.md  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  Makefile.Thrust  QAOA catcher not m itz ck  README.md  README_parallel.md  TODO.md  aer_install.py  appveyor.yml  azure-pipelines.yml  clod5.py  conanfile.py  conanfile.txt  constraints.txt  dump_vqe  genindex.html  getting_started.html  index.html  look  (+15 more)
aer/qv_addon/qiskit_addon_qv/: CMakeLists.txt  __init__.py  aer_qv_provider.py  aer_qv_simulator.py  aer_qv_wrapper.pyx
qiskit_aer/backends/wrappers/: CMakeLists.txt  aer_circuit_binding.hpp  aer_controller_binding.hpp  aer_state_binding.hpp  bindings.cc  bindings.cc.in  qasm_controller_wrapper.pyx  qv_wrapper.pyx  statevector_controller_wrapper.pyx  unitary_controller_wrapper.pyx
src/bindings/python/: CMakeLists.txt  qv_wrapper.pyx
src/open_pulse/: CMakeLists.txt  eval_hamiltonian.hpp  iterators.hpp  log.hpp  numeric_integrator.cpp  numeric_integrator.hpp  numeric_integrator_wrapper.pyx  ordered_map.hpp  pulse_utils.cpp  pulse_utils.hpp  pulse_utils_bindings.cpp  python_to_cpp.hpp  test_python_to_cpp.cpp  test_python_to_cpp.hpp  test_python_to_cpp.pyx  types.hpp  zspmv.cpp  zspmv.hpp
test/: CMakeLists.txt  __init__.py  asv.conf.json  asv.linux.conf.json  asv.linux.cuda.conf.json  asv.mac.conf.json  asv.macos.conf.json
test/benchmark/: __init__.py  asv.conf.json  basic.py  basic_05q.py  basic_10q.py  basic_15q.py  basic_20q.py  basic_25q.py  basic_5q.py  benchmark_tools.py  benchmarks.py  circuit_library_circuits.py  default_simulator.py  densitymatrix_cpu.py  densitymatrix_gpu.py  fusion_benchmarks.py  mps_cpu.py  noise.py  noise_12q.py  noise_16q.py  noise_20q.py  noise_8q.py  output.py  output_05q.py  output_10q.py  output_15q.py  output_20q.py  output_25q.py  output_5q.py  qft.py  quantum_volume_benchmarks.py  randomized_benchmarking.py  rocm_benchmark.py  simple_benchmarks.py  simulator_benchmark.py  statevector_cpu.py  statevector_gpu.py  tools.py  unitary_cpu.py  vqe_application.py  (+1 more)
test/benchmark.bak/: quantum_fourier_transform_benchmarks.py
test/benchmark/benchmarks/: benchmarks.py  quantumvolume.py
test/benchmark2/: __init__.py  arithmetic_circuits.py  basic.py  basic_change_circuits.py  measurements.py  n_local_circuits.py  noise.py  particular_quantum_circuits.py  simulator_benchmark.py
test/benchmarks/: benchmark_tools.py  parallelization_test.py  qasm_benchmarks.py  quantumvolume.py
test/data/: qobj_snapshot_expval_matrix.json  qobj_snapshot_expval_pauli.json  qobj_snapshot_matrix.json  qobj_snapshot_pauli.json  qobj_snapshot_probs.json  qobj_snapshot_state.json  qobj_snapshot_statevector.json
test/qobj/: noise_depol.json  noise_kraus.json  noise_reset.json  quantum_volume_20q_10d_0s.json  snapshot_matrix.json  snapshot_pauli.json
test/random_testing/statevector/: create_circuit.py  random_statevector_test.py  testing_loop_statevector.py
test/runtime/: runtime_sample.c
test/src/: CMakeLists.txt  test_linalg.cpp  test_snapshot.cpp  test_snapshot_bdd.cpp  test_utils.cpp  utils.hpp
test/src/ode/: test_ode_wrappers.cpp  test_sundials_cvode.cpp  test_sundials_vector.cpp
test/src/simulators/: CMakeLists.txt
test/terra/: __init__.py  common.py  decorators.py  qobj_hacks.py  test_aer_snapshot.py  test_aer_snapshots.py  test_ch_simulator.py  test_clifford_gates.py  test_common_circuits.py  test_fallback.py  test_grover_circuit.py  test_no_measurement.py  test_noise_model.py  test_noise_transformation.py  test_noise_transformer.py  test_python_to_cpp.py  test_qasm_extended_stabilizer_simulator.py  test_qasm_simulator.py  test_qasm_stabilizer_simulator.py  test_qasm_statevector_simulator.py  test_quantum_error.py  test_quantumerror.py  test_readout_error.py  test_readouterror.py  test_simple.py  test_standard_errors.py  test_statevector_simulator.py  test_unitary_simulator.py  test_unitary_state.py  test_without_measurement.py
test/terra/backends/: pulse_sim_independent.py  simulator_test_case.py  test_aer_provider.py  test_aerprovider.py  test_assemble.py  test_backend_configuration.py  test_compatibility.py  test_config_pulse_simulator.py  test_ibmq_semantics.py  test_many_worlds_simulator.py  test_parameterized_circuit.py  test_parameterized_qobj.py  test_profile.py  test_pulse_simulator.py  test_pulse_simulator0.py  test_qasm_density_matrix_gpu_simulator.py  test_qasm_density_matrix_simulator.py  test_qasm_extended_stabilizer_simulator.py  test_qasm_matrix_product_state.py  test_qasm_mps_simulator.py  test_qasm_simulator.py  test_qasm_simulator_density_matrix.py  test_qasm_simulator_density_matrix_chunk.py  test_qasm_simulator_density_matrix_mpi.py  test_qasm_simulator_extended_stabilizer.py  test_qasm_simulator_matrix_product_state.py  test_qasm_simulator_stabilizer.py  test_qasm_simulator_statevector.py  test_qasm_simulator_statevector_chunk.py  test_qasm_simulator_statevector_mpi.py  test_qasm_stabilizer_simulator.py  test_qasm_statevector_gpu_simulator.py  test_qasm_statevector_simulator.py  test_qasm_tensor_network.py  test_runtime_parameterization.py  test_statevector_simulator.py  test_unitary_gpu_simulator.py  test_unitary_simulator.py
test/terra/expression/: test_classical_expressions.py
test/terra/extensions/: test_cluster.py  test_save_amplitudes.py  test_save_expval.py  test_snapshot_all.py  test_snapshot_amplitudes.py  test_snapshot_density_matrix.py  test_snapshot_expectation_value.py  test_snapshot_probabilities.py  test_snapshot_stabilizer.py  test_snapshot_statevector.py  test_wrappers.py
test/terra/noise/: test_device_models.py  test_idle_scheduler.py  test_noise_inserter.py  test_noise_model.py  test_noise_remapper.py  test_noise_transformation.py  test_passes.py  test_pauli_error.py  test_pauli_lindblad_error.py  test_quantum_error.py  (+2 more)
(+2055 files in other folders)
